# warnely-openapi

./: README.md  index.html  openapi.json  postman-collection.json
clients/python/: README.md  pyproject.toml
clients/python/warnely/: __init__.py  client.py
clients/typescript/: README.md  package.json  tsconfig.json
clients/typescript/src/: index.ts
